Sanitize encoding artifacts / remove dashes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>IndyHAX CTF â€” Source Maps</h1>
+  <h1>IndyHAX CTF - Source Maps</h1>
   <div class="card">
     <p class="muted">This app was "minified" for production.</p>
     <p>Hint: look at <code>app.min.js</code> and what it references.</p>
