--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>IndyHAX â€¢ Source Maps</title>
+  <title>IndyHAX CTF: €¢ Source Maps</title>
   <style>
     body{font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;max-width:900px;margin:40px auto;padding:0 16px}
     .card{border:1px solid #ddd;border-radius:12px;padding:18px;background:#fff}
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>IndyHAX CTF - Source Maps</h1>
+  <h1>IndyHAX CTF: Source Maps</h1>
   <div class="card">
     <p class="muted">This app was "minified" for production.</p>
     <p>Hint: look at <code>app.min.js</code> and what it references.</p>
